# s3-portal

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: audit.py  auth.py  config.py  main.py  routes.py  s3.py  upload.py
k8s/: networkpolicy.yaml  secret.yaml
templates/: index.html
tests/: test_routes.py  test_upload.py
